# AssetSideLoader

./: .gitignore  LICENSE  README.md  README_EN.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  hook_il2cpp.cpp  hook_il2cpp.h  il2cpp-api-functions.h  il2cpp-class.h  log.h  main.cpp
app/src/main/cpp/dobby/: CMakeLists.txt
app/src/main/cpp/dobby/include/: dobby.h
app/src/main/cpp/utf8/: checked.h
app/src/main/java/com/axix/assetsideloader/: AssetSideLoader.kt  MainActivity.kt  MainHook.kt
app/src/main/java/com/axix/il2cpp_bridge/: Il2cppBridge.kt  MainActivity.kt  MainHook.kt
app/src/main/java/top/axix/assetsideloader/: AppInfo.kt  AppInfoActivity.kt  AppsAdapter.kt  AppsListActivity.kt  AssetSideLoader.kt  MainActivity.kt  MainHook.kt  SelectedAppsAdapter.kt
app/src/main/res/layout/: activity_app_info.xml  activity_apps_list.xml  activity_main.xml  item_app.xml  work_app.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
